--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
     <div class="score"></div>
     <div class="game">
-        <div class="start">Чтобы начать игру, кликни сюда</div>
+        <div class="start">
+            <button class="easy">Лёгкий</button>
+            <button class="medium">Средний</button>
+            <button class="hard">Сложный</button>
+        </div>
         <div class="gameArea"></div>
     </div>
 
