add 8 new song and random choice

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>NeedForJS</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="gameArea"></div>
     </div>
 
-    <script src="./main.js">
+    <script src="./js/main.js">
     </script>
 </body>
 
