--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <div class="score"></div>
+    <div class="topResult"></div>
     <div class="game">
         <div class="start">
             <button class="easy">Лёгкий</button>
